--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>Diehan Drotschie</title>
-    <link rel="stylesheet" type="text/css" href="CV.css">
+    <link rel="stylesheet" type="text/css" href="style.css.css">
 </head>
 <body>
     <header>
         <h1>Diehan Drotschie</h1>
-        <p>Email: <a href="mailto:diehandrotschie@gmail.com">diehandrotschie@gmail.com</a> | Phone: 082 044 3039</p>
+        <p>Email: <a href="mailto:diehandrotschie@gmail.com">diehandrotschie@gmail.com</a>/p>
     </header>
     <section>
         <h2>About Me</h2>
