--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <h1>Diehan Drotschie</h1>
-        <p>Email: <a href="mailto:diehandrotschie@gmail.com">diehandrotschie@gmail.com</a>/p>
+        <p>Email: <a href="mailto:diehandrotschie@gmail.com">diehandrotschie@gmail.com</a> </p>
     </header>
     <section>
         <h2>About Me</h2>
