--- a/index.html
+++ b/index.html
@@ -9,24 +9,94 @@
         <h1>Diehan Drotschie</h1>
         <p>Email: <a href="mailto:diehandrotschie@gmail.com">diehandrotschie@gmail.com</a> </p>
     </header>
+    <!--This section displays information about me -->
     <section>
         <h2>About Me</h2>
-        <p>I am an experienced professional with a keen interest in web development...</p>
+        <p>Nationality: South African | Age: 19 yrs | Sex: Male | Criminal Record: None | Health: Excellent</p>
     </section>
+    <!-- This is information about Academic school-->
     <section>
-        <h2>Skills</h2>
+        <h2>Educational Background</h2>
+        <p>School attended: Robertson High School (2017-2021) | Highest Standard: Grade 12 (Senior Certificate) - 94%</p>
+        <h3>Academic Achievements</h3>
         <ul>
-            <li>Web Development</li>
-            <li>Project Management</li>
-            <li>Data Analysis</li>
+            <li>Robertson High School Dux Learners Award</li>
+            <li>Top 10 Achievers Award - Western Cape</li>
+            <li>Student Council Member: Deputy Head Boy</li>
+            <li>Achieved honorary academic awards - 5 years</li>
+            <li>1st Position in Grade - Gr8-12</li>
+            <li>SA Mathematics Olympiad</li>
         </ul>
     </section>
+    <!-- This is information culture-->
     <section>
-        <h2>Academic Achievements</h2>
+            <h3>Cultural Achievements</h3>
         <ul>
-            <li>Bachelor's Degree in Computer Science - ABC University</li>
-            <li>Master's Degree in Data Science - XYZ University</li>
+            <li> CSV Team leader</li>
+
         </ul>
     </section>
+    <!-- This is information sport-->
+    <section>
+        <h3>Sports Achievements</h3>
+        <ul>
+            <li>Hockey: o/19 A First Team, Hockey Umpire, Qualified for Tour team to New Zealand</li>
+            <li>Athletics: Captain of Team</li>
+            <li>Swimming: School First Team, Captain of Team</li>
+        </ul>
+    </section>
+    <!-- Section about my Uni marks-->
+       <section>
+        <h2>University Education</h2>
+        <p>Stellenbosch University 2022: Bsc Computer Science focal Area - Data Science</p>
+        <table>
+            <tr>
+                <th>Subject</th>
+                <th>Mark</th>
+                <th>Remarks</th>
+            </tr>
+            <tr>
+                <td>Computer Science</td>
+                <td>91</td>
+                <td>PASS WITH DISTINCTION</td>
+            </tr>
+            <tr>
+                <td>Mathematics</td>
+                <td>83</td>
+                <td>PASS WITH DISTINCTION</td>
+            </tr>
+            <tr>
+                <td>Probability theory and Statistics</td>
+                <td>77</td>
+                <td>PASS WITH DISTINCTION</td>
+            </tr>
+            <tr>
+                <td>Science in Context</td>
+                <td>77</td>
+                <td>PASS WITH DISTINCTION</td>
+            </tr>
+                        <tr>
+                <td>Data Science</td>
+                <td>81</td>
+                <td>PASS WITH DISTINCTION</td>
+            </tr>
+                        <tr>
+                <td>Computer Science</td>
+                <td>94</td>
+                <td>PASS WITH DISTINCTION</td>
+            </tr>
+                        <tr>
+                <td>Applied Mathematics</td>
+                <td>88</td>
+                <td>PASS WITH DISTINCTION</td>
+            </tr>
+                        <tr>
+                <td>Mathematics</td>
+                <td>84</td>
+                <td>PASS WITH DISTINCTION</td>
+            </tr>
+        </table>
+    </section>
+
 </body>
 </html>
