--- a/achievements.html
+++ b/achievements.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume Website</title>
+    <title>Achievements</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
 </head>
 <body>
     <aside class="sidebar">
@@ -22,17 +21,11 @@
             <a href="https://www.linkedin.com/in/diehan-drotschie-168a781b3/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
     </aside>
-    <main>
-        <section id="intro">
-            <h1>I'm Diehan Drotschie</h1>
-            <p>Computer science student</p>
-            <button>Resume</button>
-        </section>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Short bio here...</p>
-        </section>
 
-    </main>
+        <main>
+        <section id="intro">
+            <h1>Academic achievements</h1>
+        </section>
+        </main>
 </body>
 </html>
