layout and information

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="social-media">
             <!-- Social media links -->
             <a href="https://www.linkedin.com/in/diehan-drotschie-168a781b3/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href = "mailto: diehandrotschie@gmail.com" target = "_blank"> <i class = "fa fa-envelope"></i></a>
         </div>
     </aside>
     <main>
@@ -30,7 +31,13 @@
         </section>
         <section id="about">
             <h2>About Me</h2>
-            <p>Short bio here...</p>
+            <ul>
+                <li>Nationality: South African</li>
+                <li>Age: 20 yrs</li>
+                <li>Sex: Male</li>
+                <li>Criminal Record: None</li>
+                <li>Health: Excellent</li>
+            </ul>
         </section>
 
     </main>
