--- a/achievements.html
+++ b/achievements.html
@@ -19,6 +19,7 @@
         <div class="social-media">
             <!-- Social media links -->
             <a href="https://www.linkedin.com/in/diehan-drotschie-168a781b3/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href = "mailto: diehandrotschie@gmail.com" target = "_blank"> <i class = "fa fa-envelope"></i></a>
         </div>
     </aside>
 
