--- a/achievements.html
+++ b/achievements.html
@@ -22,10 +22,102 @@
             <a href = "mailto: diehandrotschie@gmail.com" target = "_blank"> <i class = "fa fa-envelope"></i></a>
         </div>
     </aside>
-
         <main>
+            <!-- Section for intro heading -->
         <section id="intro">
-            <h1>Academic achievements</h1>
+            <h1>Achievements</h1>
+        </section>
+            <!-- Section for academic achievements-->
+        <section id ="academic">
+            <h2>Academic achievements</h2>
+            <p>School attented Robertson High School (2017-2021) | Highest Standard: Grade 12 (Senior Certificate) - 94%</p>
+                <ul>
+                    <li>Robertson High School Dux Learners Award</li>
+                    <li>Top 10 Achievers Award - Western Cape</li>
+                    <li>Student Council Member: Deputy Head Boy</li>
+                    <li>Achieved honorary academic awards - 5 years</li>
+                    <li>1st Position in Grade - Gr 8-12</li>
+                    <li>Sa Mathematics Olympiad</li>
+                </ul>
+        </section>
+            <!-- Section for culture achievements-->
+        <section id ="culture">
+            <h2>Culture achievements</h2>
+            <ul>
+                <li>CSV Team leader</li>
+            </ul>
+        </section>
+            <!-- Section for sports achievements -->
+        <section id = "sport">
+            <h2>Sports achievements</h2>
+                <ul>
+                    <li>Hockey: 0/19 A First Team, Hockey Umpire, Qualified for Tour team to New Zealand</li>
+                    <li>Athletics: Captain of Team</li>
+                    <li>Swimming: School First Team, Captain of Team</li>
+                </ul>
+        </section>
+
+        <!-- Section for table for Uni marks-->
+        <section id="marks">
+            <h2>University Education</h2>
+            <p>Stellenbosch University 2022: Bsc Computer Science focal Area - Data Science</p>
+            <!-- table with marks of university -->
+            <table>
+                <tr>
+                    <th>Subject</th>
+                    <th>Mark</th>
+                    <th>Remarks</th>
+                </tr>
+
+                <tr>
+                    <td>Computer Science</td>
+                    <td>91</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Mathematics</td>
+                    <td>83</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Probability theory and Statistics</td>
+                    <td>77</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Science in Context</td>
+                    <td>77</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Data Science</td>
+                    <td>81</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+
+                <tr>
+                    <td>Computer Science</td>
+                    <td>94</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Applied Mathematics</td>
+                    <td>88</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Mathematics</td>
+                    <td>84</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+            </table>
         </section>
         </main>
 </body>
