--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <section id="intro">
             <h1>I'm Diehan Drotschie</h1>
-            <p>Computer science student</p>
+            <h2>Computer science student</h2>
             <button>Resume</button>
         </section>
         <section id="about">
