--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section id="intro">
             <h1>I'm Diehan Drotschie</h1>
             <h2>Computer science student</h2>
-            <button>Resume</button>
+            <button class="btn"><i class="fa fa-download"></i> Resume</button>
         </section>
         <section id="about">
             <h2>About Me</h2>
