added headings for projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,27 @@
     </aside>
 
         <main>
+            <!-- Main heading-->
         <section id="intro">
             <h1>Projects portfolio</h1>
+        </section>
+            <!-- Section for tic tac toe game -->
+        <section id = "tictactoe">
+            <h2>Tic Tac Toe</h2>
+            <p>This is a very basic tic tac toe game made with java. It checks who won them game when you play and the asks you afterwards 
+                if you wan to play again.
+            </p>
+        </section>
+            <!--Section for impasse game-->
+        <section id = "impasse">
+            <h2>Impasse game</h2>
+
+        </section>
+
+            <!--Section for Moving maze game-->
+        <section id = "moving_maze">
+            <h2>Moving maze game</h2>
+
         </section>
         </main>
 </body>
