--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <section id="intro">
             <h1>I'm Diehan Drotschie</h1>
             <h2>Computer science student</h2>
+            <a href = "https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/DiehanCV.pdf">
             <button class="btn"><i class="fa fa-download"></i> Resume</button>
+            </a>
         </section>
         <section id="about">
             <h2>About Me</h2>
