--- a/achievements.html
+++ b/achievements.html
@@ -38,6 +38,7 @@
                     <li>Achieved honorary academic awards - 5 years</li>
                     <li>1st Position in Grade - Gr 8-12</li>
                     <li>Sa Mathematics Olympiad</li>
+                    <li>Member of Golden Key International Society</li>
                 </ul>
         </section>
             <!-- Section for culture achievements-->
