--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
     </aside>
     <main>
         <section id="intro">
-            <h1>I'm Diehan Drotschie</h1>
+            <h1>Diehan Drotschie</h1>
             <h2>Computer science student</h2>
+            <!-- Link to download resume-->
             <a href = "https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/DiehanCV.pdf">
             <button class="btn"><i class="fa fa-download"></i> Resume</button>
             </a>
+            <!-- Image of me -->
+            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/da590ce7-ff58-42eb-a82d-ceaae97efd6f.JPG?raw=true" id = "pfpimage">  
         </section>
         <section id="about">
             <h2>About Me</h2>
