pfp added and fine

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button class="btn"><i class="fa fa-download"></i> Resume</button>
             </a>
             <!-- Image of me -->
-            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/da590ce7-ff58-42eb-a82d-ceaae97efd6f.JPG?raw=true" id = "pfpimage">  
+            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/pfp.jpg?raw=true" id = "pfpimage">  
         </section>
         <section id="about">
             <h2>About Me</h2>
