tic tac toe added, image added, 2nd year marks added

--- a/achievements.html
+++ b/achievements.html
@@ -62,7 +62,9 @@
         <section id="marks">
             <h2>University Education</h2>
             <p>Stellenbosch University 2022: Bsc Computer Science focal Area - Data Science</p>
-            <!-- table with marks of university -->
+
+            <h3>1st Year marks</h3>
+            <!-- table with marks of university of 1st year -->
             <table>
                 <tr>
                     <th>Subject</th>
@@ -71,51 +73,114 @@
                 </tr>
 
                 <tr>
-                    <td>Computer Science</td>
+                    <td>Computer Science 114</td>
                     <td>91</td>
                     <td>Pass with desctinction</td>
                 </tr>
 
                 <tr>
-                    <td>Mathematics</td>
+                    <td>Mathematics 114</td>
                     <td>83</td>
                     <td>Pass with desctinction</td>
                 </tr>
 
                 <tr>
-                    <td>Probability theory and Statistics</td>
+                    <td>Probability theory and Statistics 114</td>
                     <td>77</td>
                     <td>Pass with desctinction</td>
                 </tr>
 
                 <tr>
-                    <td>Science in Context</td>
+                    <td>Science in Context 178</td>
                     <td>77</td>
                     <td>Pass with desctinction</td>
                 </tr>
 
                 <tr>
-                    <td>Data Science</td>
+                    <td>Data Science 141</td>
                     <td>81</td>
                     <td>Pass with desctinction</td>
                 </tr>
 
-
                 <tr>
-                    <td>Computer Science</td>
+                    <td>Computer Science 144</td>
                     <td>94</td>
                     <td>Pass with desctinction</td>
                 </tr>
 
                 <tr>
-                    <td>Applied Mathematics</td>
+                    <td>Applied Mathematics 144</td>
                     <td>88</td>
                     <td>Pass with desctinction</td>
                 </tr>
 
                 <tr>
-                    <td>Mathematics</td>
+                    <td>Mathematics 144</td>
                     <td>84</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+            </table>
+
+            <h3>2nd Year marks</h3>
+            <!-- table with marks of university of 1st year -->
+            <table>
+                <tr>
+                    <th>Subject</th>
+                    <th>Mark</th>
+                    <th>Remarks</th>
+                </tr>
+
+                <tr>
+                    <td>Computer Science 214</td>
+                    <td>80</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Applied Mathematics 214</td>
+                    <td>85</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Mathematics 214</td>
+                    <td>84</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Mathematical Statstics 214</td>
+                    <td>80</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Computer Science 244</td>
+                    <td>76</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Mathematics 244</td>
+                    <td>82</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Mathematical Statistics 245</td>
+                    <td>60</td>
+                    <td>Pass</td>
+                </tr>
+
+                <tr>
+                    <td>Mathematical Statistics 246</td>
+                    <td>85</td>
+                    <td>Pass with desctinction</td>
+                </tr>
+
+                <tr>
+                    <td>Data Science 241</td>
+                    <td>76</td>
                     <td>Pass with desctinction</td>
                 </tr>
             </table>
