--- a/portfolio.html
+++ b/portfolio.html
@@ -34,6 +34,7 @@
             <p>This is a very basic tic tac toe game made with java. It checks who won them game when you play and the asks you afterwards 
                 if you wan to play again.
             </p>
+            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/tictactoe.jpg?raw=true" id = "tictactoeimg">  
         </section>
             <!--Section for impasse game-->
         <section id = "impasse">
