photos and description added to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,13 +39,37 @@
             <!--Section for impasse game-->
         <section id = "impasse">
             <h2>Impasse game</h2>
-
+            <p>
+                This is a game with board of set size blocks such as 8 x 8 and where you have either 2 or 3 different colours. You then have to
+                pick a color for each block following a set of rules till you have assigned a colour to each block in the grid while not violating
+                any of the rules.
+            </p>
         </section>
 
             <!--Section for Moving maze game-->
         <section id = "moving_maze">
             <h2>Moving maze game</h2>
+            <p>
+                This game start with 4 players each in one corner of a maze where the maze size is specief before the game such as 3 x 3 grid. The goal
+                is for each player to collect their tokens that are scattered around the maze then return to their starting corner. Each player also has to
+                push a block into the maze which can cause the maze to change before they move.
+            </p>
+        </section>
 
+            <!--Section for compression and decompression software-->
+        <section id = "cmpsoft">
+            <h2>Compression and Decompression Software</h2>
+            <p>This Software reads in a text file then uses a finite autonoma algorithm to calculate which pixels should be black or white for decompression
+                It also takes a image then compresses it into a text file with all the information needed to decompress it again with the finite autonoma.
+            </p>
+        </section>
+
+        <!-- Wedding table website-->
+        <section id = "wedtable">
+            <h2>Wedding table allocation website</h2>
+            <p>This Website takes in input of the name and surname of a guest to the wedding then searches for the person in a .json file.
+                It then displays the person and their date's name if they have a date and then also their table number.
+            </p>
         </section>
         </main>
 </body>
