added some phots to portfolio on website

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,9 @@
                 pick a color for each block following a set of rules till you have assigned a colour to each block in the grid while not violating
                 any of the rules.
             </p>
+             <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/imp1.jpg?raw=true" id = "imp1">  
+            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/imp2.jpg?raw=true" id = "imp2">  
+
         </section>
 
             <!--Section for Moving maze game-->
@@ -54,6 +57,8 @@
                 is for each player to collect their tokens that are scattered around the maze then return to their starting corner. Each player also has to
                 push a block into the maze which can cause the maze to change before they move.
             </p>
+            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/mvz.jpg?raw=true" id = "mvz">  
+
         </section>
 
             <!--Section for compression and decompression software-->
