decomp image added

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,8 @@
             <p>This Software reads in a text file then uses a finite autonoma algorithm to calculate which pixels should be black or white for decompression
                 It also takes a image then compresses it into a text file with all the information needed to decompress it again with the finite autonoma.
             </p>
+            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/decsoft.jpg?raw=true" id = "mvz">  
+
         </section>
 
         <!-- Wedding table website-->
