all images added to portfolion

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
             <p>This Software reads in a text file then uses a finite autonoma algorithm to calculate which pixels should be black or white for decompression
                 It also takes a image then compresses it into a text file with all the information needed to decompress it again with the finite autonoma.
             </p>
-            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/decsoft.jpg?raw=true" id = "mvz">  
+            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/decsoft.jpg?raw=true" id = "decsoftimg">  
 
         </section>
 
@@ -77,6 +77,9 @@
             <p>This Website takes in input of the name and surname of a guest to the wedding then searches for the person in a .json file.
                 It then displays the person and their date's name if they have a date and then also their table number.
             </p>
+            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/wedding1.jpg?raw=true" id = "wed1im">  
+            <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/wedding2.jpg?raw=true" id = "wed2im">  
+
         </section>
         </main>
 </body>
