--- a/achievements.html
+++ b/achievements.html
@@ -39,6 +39,7 @@
                     <li>1st Position in Grade - Gr 8-12</li>
                     <li>Sa Mathematics Olympiad</li>
                     <li>Member of Golden Key International Society</li>
+                    <li>Grade 12(Senior Certificate) Avg: 94.57%</li>
                 </ul>
         </section>
             <!-- Section for culture achievements-->
