--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,26 @@
 
         <main>
             <!-- Main heading-->
-        <section id="intro">
+        <header id="intro">
             <h1>Projects portfolio</h1>
-        </section>
+        </header>
+            <!-- Section for Programming languages-->
+            <section id = "programming_lang">
+                <h2>Programming Languages</h2>
+                <ul>
+                    <li>Java</li>
+                    <li>C</li>
+                    <li>Python</li>
+                    <li>Html</li>
+                    <li>CSS</li>
+                    <li>R</li>
+                    <li>Dart with Firebase</li>
+                    <li>Delphi</li>
+
+                </ul>
+
+            </section>
+
             <!-- Section for tic tac toe game -->
         <section id = "tictactoe">
             <h2>Tic Tac Toe</h2>
@@ -80,6 +97,14 @@
             <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/wedding1.jpg?raw=true" id = "wed1im">  
             <img src="https://raw.githubusercontent.com/DiehanDrotschie/DiehanDrotschieCV.github.io/main/Photos/wedding2.jpg?raw=true" id = "wed2im">  
 
+        </section>
+
+        <!--Section for instagram clone app -->
+        <section id = "insta_clone">
+            <h2>Instagram clone app with certain functionality</h2>
+            <p>This app is a small project to lear dart with Firebase. It is a clone of instagram that has some of the functionality such as uploading images
+                commenting, liking, following other people and searching for other people.
+            </p>
         </section>
         </main>
 </body>
