--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
         <!--Section for instagram clone app -->
         <section id = "insta_clone">
             <h2>Instagram clone app with certain functionality</h2>
-            <p>This app is a small project to lear dart with Firebase. It is a clone of instagram that has some of the functionality such as uploading images
+            <p>This app is a small project to learn dart with Firebase. It is a clone of instagram that has some of the functionality such as uploading images
                 commenting, liking, following other people and searching for other people.
             </p>
 
